# christmas-merkle-tree-backend

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2024-11-03-003551_create_trees/: down.sql  up.sql
migrations/2024-11-03-003839_create_messages/: up.sql
src/: main.rs  merkles.rs  models.rs  schema.rs
src/db/: connection.rs  models.rs  queries.rs  schema.rs
src/routes/: messages.rs  trees.rs
src/utils/: hash.rs  merkle.rs  mod.rs  pinata.rs  proof.rs
verifier/src/: main.rs
verifier/src/models/: message.rs
verifier/src/routes/: mod.rs  trees.rs
