[package]
name = "christmas_merkle_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs_merkle = "1.4.2"
hex = "0.4.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag="v0.1.0-alpha.7" }
bincode = "1.3"
chrono = "0.4"
regex = "1.11.1"
sha2 = "0.10"
