[package]
name = "christmas_merkle_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs_merkle = "1.4.2"
hex = "0.4.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag="v0.1.0-alpha.7" }
bincode = "1.3"
chrono = "0.4"
regex = "1.11.1"
sha2 = "0.10"
tower-http = { version = "0.6.1", features = ["cors"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["multipart", "json"] }
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
